# enea-client

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
enea_client/: __main__.py  app.py  client.py  config.py
enea_client/utils/: connection.py  file_store.py  sanitizer.py
scripts/: enea_client.service  enea_client.timer  post_process_script.sh
tests/: conftest.py  test_app.py  test_client.py  test_file_store.py  test_sanitizer.py
